[gd_scene load_steps=11 format=3 uid="uid://na5avsr373e0"]

[ext_resource type="Theme" uid="uid://cv017eo06bbcu" path="res://property_panel/prop_theme.tres" id="1_1j15l"]
[ext_resource type="Script" uid="uid://b7l6bw04hy35s" path="res://property_panel/property_inspector.gd" id="2_k3mye"]
[ext_resource type="Script" uid="uid://csatcdq5ap0k3" path="res://property_panel/property_titlebar.gd" id="3_xc7nb"]
[ext_resource type="Texture2D" uid="uid://b56x7hpdiesci" path="res://gui/icons/TripleBar.svg" id="4_ar0n8"]
[ext_resource type="Texture2D" uid="uid://i647i3fpchqf" path="res://gui/icons/ActionCopy.svg" id="5_3v76a"]
[ext_resource type="Texture2D" uid="uid://li32t4aji72h" path="res://gui/icons/Duplicate.svg" id="6_umido"]
[ext_resource type="Texture2D" uid="uid://dqeun4g6xfevj" path="res://gui/icons/Close.svg" id="7_etdec"]
[ext_resource type="Texture2D" uid="uid://b1vbt16mpkxcl" path="res://gui/icons/MoveDown.svg" id="8_7i5mj"]
[ext_resource type="Texture2D" uid="uid://u4ts7mfiq77b" path="res://gui/icons/MoveUp.svg" id="9_k4l20"]
[ext_resource type="Texture2D" uid="uid://bjnwa212567hj" path="res://gui/icons/Collapse.svg" id="10_k227f"]

[node name="PropertyInspector" type="VBoxContainer"]
offset_right = 684.0
offset_bottom = 1019.0
theme = ExtResource("1_1j15l")
theme_override_constants/separation = 0
script = ExtResource("2_k3mye")

[node name="PropertyManager" type="Node" parent="."]

[node name="TitleContainer" type="PanelContainer" parent="." node_paths=PackedStringArray("title")]
z_index = 1
layout_mode = 2
theme_type_variation = &"PropertyTitleContainer"
script = ExtResource("3_xc7nb")
title = NodePath("TitleBar/Label")

[node name="TitleBar" type="HBoxContainer" parent="TitleContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="GrabIndicator" type="TextureRect" parent="TitleContainer/TitleBar"]
visible = false
layout_mode = 2
texture = ExtResource("4_ar0n8")
stretch_mode = 3

[node name="Label" type="Label" parent="TitleContainer/TitleBar"]
layout_mode = 2
text = "Projectile %d"

[node name="CopyButton" type="TextureButton" parent="TitleContainer/TitleBar"]
layout_mode = 2
tooltip_text = "Copy XML"
texture_normal = ExtResource("5_3v76a")
stretch_mode = 3

[node name="Duplicate" type="TextureButton" parent="TitleContainer/TitleBar"]
layout_mode = 2
size_flags_horizontal = 10
tooltip_text = "Duplicate"
texture_normal = ExtResource("6_umido")
stretch_mode = 3

[node name="Delete" type="TextureButton" parent="TitleContainer/TitleBar"]
layout_mode = 2
size_flags_horizontal = 8
tooltip_text = "Delete"
texture_normal = ExtResource("7_etdec")
stretch_mode = 3

[node name="VSeparator" type="VSeparator" parent="TitleContainer/TitleBar"]
layout_mode = 2

[node name="MoveDown" type="TextureButton" parent="TitleContainer/TitleBar"]
layout_mode = 2
tooltip_text = "Move Down"
texture_normal = ExtResource("8_7i5mj")
stretch_mode = 3

[node name="MoveUp" type="TextureButton" parent="TitleContainer/TitleBar"]
layout_mode = 2
tooltip_text = "Move Up"
texture_normal = ExtResource("9_k4l20")
stretch_mode = 3

[node name="VSeparator2" type="VSeparator" parent="TitleContainer/TitleBar"]
layout_mode = 2

[node name="Collapse" type="TextureButton" parent="TitleContainer/TitleBar"]
layout_mode = 2
size_flags_horizontal = 8
tooltip_text = "Toggle Collapse"
focus_mode = 0
texture_normal = ExtResource("10_k227f")
stretch_mode = 3

[node name="PropertiesPanel" type="PanelContainer" parent="."]
visible = false
layout_mode = 2
theme_type_variation = &"PropertyValueContainer"

[connection signal="pressed" from="TitleContainer/TitleBar/CopyButton" to="TitleContainer" method="_on_copy_button_pressed"]
[connection signal="pressed" from="TitleContainer/TitleBar/Duplicate" to="TitleContainer" method="_on_duplicate_pressed"]
[connection signal="pressed" from="TitleContainer/TitleBar/Delete" to="TitleContainer" method="_on_delete_pressed"]
[connection signal="pressed" from="TitleContainer/TitleBar/MoveDown" to="TitleContainer" method="_on_move_down_pressed"]
[connection signal="pressed" from="TitleContainer/TitleBar/MoveUp" to="TitleContainer" method="_on_move_up_pressed"]
[connection signal="pressed" from="TitleContainer/TitleBar/Collapse" to="TitleContainer" method="_on_collapse_pressed"]
